Update: 전체적인 CSS 및 마이페이지 완료
Former-commit-id: 1395a397a85144c228ac4e0a4553797094f95545

--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -21,6 +21,11 @@ code {
   src: url("./../assets/fonts/new.ttf");
 }
 
+@font-face {
+  font-family: "bamin";
+  src: url("./../assets/fonts/BAMIN.ttf");
+}
+
 /* openvidu css */
 html {
   position: relative;
