--- a/FrontEnd/src/components/pages/Video/UserVideo.css
+++ b/FrontEnd/src/components/pages/Video/UserVideo.css
@@ -1,19 +1,20 @@
-video {
-    width: 100%;
-    height: auto;
-    float: left;
-    cursor: pointer;
+.video {
+  width: 100%;
+  height: 100%;
+  float: left;
+  cursor: pointer;
 }
 .streamcomponent div {
-    position: absolute;
-    background: #f8f8f8;
-    padding-left: 5px;
-    padding-right: 5px;
-    color: #777777;
-    font-weight: bold;
-    border-bottom-right-radius: 4px;
+  /* position: absolute; */
+  background: #f8f8f8;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 500px;
+  color: #777777;
+  font-weight: bold;
+  border-bottom-right-radius: 4px;
+  /* height: 100%; */
 }
-p{
-    margin: 0;
+p {
+  margin: 0;
 }
-
